On desktop, made the title not wrap on to next line, limiting it to one line so that symbols dont break onto next line. When they break on desktop, they are cut off because of the fixed height

--- a/css/style.css
+++ b/css/style.css
@@ -1053,6 +1053,13 @@ a {
         width: 50%;
     }
 
+    #limit-title {
+        white-space: nowrap;
+
+
+
+    }
+
 
 
 
